kubernetes/aws/task-005-kops-with-treafik-customization/echo-app/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: "HostRegexp(`yourdomain.com`) && PathPrefix(`/foo`)"
      kind: Rule
      services:
        - name: echo
          port: 80
      middlewares:
        - name: traceid
